src/_includes/css/style.css
/* ... */
.direct-link:hover {
    text-decoration: underline !important;
}

#post h2:hover .direct-link,
#post h3:hover .direct-link,
#post h4:hover .direct-link,
#post .direct-link:focus,
#post .direct-link:focus,
#post .direct-link:focus {
    color: #444 !important;
    cursor: pointer;
}

#post {
    margin-top: 3.5rem;
}
.clear-filter-btn {
    font-size: .95rem;
}
.main-content .my-posts .clear-filter-btn:hover {
    text-decoration: underline !important;
}
.tagged-title {
    display: flex; 
    flex-wrap: wrap; 
    justify-content: space-between; 
    align-items: center;
}

.main-content .post {
    padding-top: .5rem;
    padding-bottom: .5rem;
}

#post-content #post ul li,
#post-content #post ol li {
    padding: .3rem 0;
}
.main-content .post .preview {
    line-height: 1.5;
    margin-top: .5rem;
    margin-bottom: .5rem;
}
.post .date {
    font-size: 16px;
    margin-top: 0;
    margin-bottom: .75rem;
}

#main {
    /* max-width: 85ch;
    max-width: 1000px; */
    margin: 0 auto 3rem auto;
}

main .art {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 2rem;
    margin-left: auto;
    margin-right: auto;
    padding-left: 1rem;
    padding-right: 1rem;
    padding-bottom: 1rem;
    max-width: 1000px;
}

main .art .art-details {
    margin-top: 2rem;
    margin-bottom: 2rem;
    text-align: left;
}

main .art .art-details h2 {
    font-size: 24px;
}

main .art img {
    object-fit: cover;
    width: 640px;
    height: 400px;
}

/* Media queries - START */

@media (max-width: 900px) {
    .featured-art .feat-art-list {
        flex-direction: column;
    }
    .featured-art  h2 {
        text-align: center;
    }
}

@media (max-width: 800px) {
    .featured-art .feat-art-list li a img {
        height: 100%;
    }
    .featured-art .feat-art-list li {
        padding-right: 0;
    }
} 

@media (max-width: 635px) {
    .footer-content .footer-nav {
        padding-top: 1rem;
        display: flex;
        flex-direction: column-reverse;
        justify-content: flex-start;
        align-items: flex-start;
    }
    .footer-content .footer-nav .footer-flex {
        padding-bottom: .25rem;
    }
}

@media (max-width: 670px) {
    .top-nav .nav-wrapper {
        padding-top: 1rem;
        padding-bottom: .5rem;
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        align-items: flex-start;
    }

    .top-nav .nav-wrapper .nav-home {
        margin-bottom: 1.5rem;
    }

    .top-nav .nav-wrapper .nav-menu {
        overflow-x: scroll;
    }

    .navigation .navigation-wrapper .nav-main .nav-list .nav-item a {
        padding-left: .5rem;
        margin-left: 0;
    }
    .top-nav .nav-wrapper .nav-menu li .first-link {
        margin-left: 0;
    }
}

@media (max-width: 375px) {
    .footer-content .footer-nav {
        padding-bottom: 1rem;
    }
    .footer-content .footer-flex ul {
        flex-wrap: wrap;
        height: 2.5rem;
    }
    .footer-content .footer-flex ul .edit-page {
        margin-top: .75rem;
    }
    .footer-flex {
        margin-top: 1rem;
    }
}

@media (max-width: 365px) {
    .socials-list {
        flex-direction: column;
    }

    .socials-list li a {
        margin: 1rem 0;
    }
}

@media (max-width: 350px) {
    .main-container .projects .project-grid {
        grid-template-columns: repeat(auto-fit, minmax(17rem, 1fr));
    }
}

